Created Handler for BLPOP Command